--- a/scss/goodslist.scss
+++ b/scss/goodslist.scss
@@ -239,6 +239,7 @@
 .tab3{
 	@extend .tab1 ;
 	background:#efefef;
+	position: relative;
 	.tab3-m{
 		height: 26px;
 		border: #ccc 1px solid;
@@ -250,6 +251,7 @@
 			line-height: 24px;
 			float: left;
 			border: none;
+			outline: none;
 			background:white url(http://www.bxmedia.net/template/bdw/statics/images/list_icon12.png) no-repeat 3px 9px;
 			color: #999999;
 		}
@@ -264,6 +266,38 @@
 			float: left;
 		}
 	}
+	.qk{
+		display: none;
+		position: absolute;
+		z-index: 2;
+		left: 0;
+		bottom: -26px;
+		width: 114px;
+		height: 26px;
+		background: #efefef;
+		.inputa{
+			width: 36px;
+			height: 20px;
+			float: left;
+			border: #ccc 1px solid;
+			background: #fff;
+			text-align: center;
+			line-height: 20px;
+			color: #999;
+			border-radius: 2px;
+			margin-left:12px;
+			outline: none;
+		}
+		.inputb{
+			@extend .inputa;
+			background: #2362af;
+			color: white;
+			border:#2362af 1px solid;
+		}
+	}
+}
+.tab3:hover .qk{
+	display: block;
 }
 .text{
 	width: 90px;
@@ -295,166 +329,185 @@
 }
 .right-listmore{
 	width: 977px;
+	height: 3200px;
 	overflow: hidden;
-	// .goodslist{
-	// 	width: 977px;
-	// 	height: 5000px;
-	// 	overflow: hidden;
-	// 	li{
-	// 		position: relative;
-	// 		border:1px solid white;
-	// 		width: 226px;
-	// 		font-size: 12px;
-	// 		height: 392px;
-	// 		margin: 0 9px;
-	// 		float: left;
-	// 		.listdiv{
-	// 			position: absolute;
-	// 			left: -1px;
-	// 			top:  27px;
-	// 			border:1px solid white;
-	// 			width: 226px;
-	// 			height: 390px;
-	// 			.picture a{
-	// 				display: block;
-	// 				width: 200px;
-	// 				height: 200px;
-	// 				overflow: hidden;
-	// 				margin: 0 auto;
-	// 				img{
-	// 					vertical-align: middle;
-	// 				}
-	// 			}
-	// 			p{
-	// 				width: 202px;
-	// 				height: 18px;
-	// 				line-height: 18px;
-	// 				margin: 16px auto 0;
-	// 				a{
-	// 					color: #666666;
-	// 				}
-	// 				a:hover{
-	// 					text-decoration: underline;
-	// 				}
-	// 			}
-	// 			.grade{
-	// 				width: 202px;
-	// 				height: 22px;
-	// 				line-height: 22px;
-	// 				color: #666666;
-	// 				margin: 5px auto 0;
-	// 				overflow: hidden;
-	// 				span{
-	// 					display: inline-block;
-	// 					float: left;
-	// 					width: 62px;
-	// 					height: 22px;
-	// 					overflow: hidden;
-	// 					margin-right: 6px;
-	// 					background: url(http://www.bxmedia.net/template/bdw/statics/images/sler-stars.png) no-repeat -63px 4px;
-	// 				}
-	// 				a{
-	// 					color: #2362af;
-	// 					float: left;
-	// 					padding-right: 3px;
-	// 				}
-	// 				i{
-	// 					float: left;
-	// 					font-style: normal;
-	// 				}
-	// 			}
-	// 			.gprice{
-	// 				width: 202px;
-	// 				height: 18px;
-	// 				line-height: 18px;
-	// 				margin: 8px auto 0;
-	// 				i{
-	// 					font-style: normal;
-	// 					font-weight: 900;
-	// 					color: #ed1f23;
-	// 					font-size: 16px;
-	// 					padding-right: 3px;
-	// 				}
-	// 				span{
-	// 					text-decoration: line-through;
-	// 					color: #999999;
-	// 				}
-	// 			}
-	// 			.operate{
-	// 				width: 200px;
-	// 				height: 30px;
-	// 				margin: 8px auto 0;
-	// 				span{
-	// 					cursor: pointer;
-	// 					display: inline-block;
-	// 					width: 37px;
-	// 					height: 28px;
-	// 					line-height: 28px;
-	// 					color: #999999;
-	// 					margin-left: -1px;
-	// 					padding-left: 29px;
-	// 					border: 1px solid #dddddd;
-	// 					float: left;
-	// 					background: url(http://www.bxmedia.net/template/bdw/statics/images/heart-icon.png) no-repeat 8px 8px;
-	// 				}
-	// 				a{
-	// 					display: inline-block;
-	// 					width: 71px;
-	// 					height: 28px;
-	// 					line-height: 28px;
-	// 					color: #eb2c3a;
-	// 					margin-left: -1px;
-	// 					padding-left: 34px;
-	// 					border: 1px solid #dddddd;
-	// 					float: left;
-	// 					background: url(http://www.bxmedia.net/template/bdw/statics/images/heart-icon.png) no-repeat 8px -40px;
-	// 				}
-	// 			}
-	// 			.store{
-	// 				width: 202px;
-	// 				height: 32px;
-	// 				margin: 5px auto 0;
-	// 				line-height: 32px;
-	// 				color: #666666;
-	// 				.sa{
-	// 					width: 86px;
-	// 					height: 32px;
-	// 					margin-right: 3px;
-	// 					color: #2362af;
-	// 					float: left;
-	// 				}
-	// 				a:hover{
-	// 					text-decoration: underline;
-	// 				}
-	// 				span{
-	// 					display: inline-block;
-	// 					float: left;
-	// 					a{
-	// 						padding: 0 2px;
-	// 						color: #666666;
-	// 					}
-	// 					a:hover{
-	// 						color: red;
-	// 					}
-	// 				}
-	// 			}
-	// 			.showmore{
-	// 				display:none;
-	// 				white-space:nowrap;
-	// 				overflow:hidden;
-	// 				text-overflow:ellipsis;
-	// 				width: 211px;
-	// 				height: 30px;
-	// 				line-height: 31px;
-	// 				padding-left: 5px;
-	// 				position: absolute;
-	// 				left: 0;
-	// 				bottom: 0;
-	// 				background-color: #ededed;
-	// 				color: #666666;
-	// 			}
-	// 		}
-	// 	}
-	// }
 }
-
+.infopage{
+	margin: 35px 0;
+	float: right;
+	display: inline-block;
+	li{	
+		display: inline-block;
+		float: left;
+		a:hover{
+			color: #e60611;
+			background: #FFF;
+			border: 1px solid #e60611;
+		}
+	}
+	.nowpage{
+		display: inline-block;
+		height: 26px;
+		width: 28px;
+		line-height: 26px;
+		border: 1px solid #b3b5bd;
+		border-radius: 3px 3px 3px 3px;
+		margin-left: 4px;
+		text-align: center;
+		color: white;
+		background: #e60611;
+	}
+	.everypage{
+		@extend .nowpage;
+		background: white;
+		color: #666666;
+		border-color: #b3b5bd;
+	}
+	.downpage{
+		border: 1px solid #b3b5bd;
+		border-radius: 5px 5px 5px 5px;
+		color: #666666;
+		display: inline-block;
+		font-size: 14px;
+		font-style: normal;
+		height: 26px;
+		line-height: 26px;
+		text-align: center;
+		width: 75px;
+		margin-left: 4px;
+	}
+	.pagediv{
+		font-size: 12px;
+		color: #333;
+		margin-left: 10px;
+		.inputpage{
+			border: #b3b5bd 1px solid;
+			width: 36px;
+			height: 24px;
+			text-align: center;
+			outline: none;
+		}
+		.butnpage{
+			margin-left: 5px;
+			width: 50px;
+			height: 26px;
+			background: #FFF;
+			border: 1px solid #AA998A;
+			cursor: pointer;
+			outline: none;
+		}
+	}
+	
+}
+.goodsl{
+	border-color: #e6e6e6;
+	border-bottom-color:white;
+}
+.zyc{
+	display: none;
+	width: 100%;
+	background: rgba(051, 051, 051, .6);
+	height: 1200px;
+	z-index: 10000;
+	position: absolute;
+	left: 0;
+	top: 0;
+	.gocar{
+		width: 609px;
+		height: 250px;
+		margin: -125px 0px 0px -304.5px;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		.gocar-bg{
+			width: 599px;
+			height: 240px;
+			padding: 5px;
+			background-color: #666666;
+			background: rgba(102, 102, 102,0.5);
+			.gocarMore{
+				width: 599px;
+				height: 240px;
+				background-color: #fff;
+				.more-top{
+					width: 597px;
+					height: 33px;
+					border: 1px solid #e5e5e5;
+					i{
+						color: #333;
+						font-style: normal;
+						font-size: 14px;
+						font-weight: 900;
+						float: left;
+						line-height: 33px;
+						padding-left: 13px;
+					}
+					span{
+						display: inline-block;
+						float: right;    
+						width: 15px;
+						height: 15px;
+						margin: 6px 10px 0 0;
+					}
+				}
+				.more-bottom{
+					width: 548px;
+					height: 240px;
+					margin: 0 auto;
+					.m-left{
+						width: 68px;
+						height: 150px;
+						float: left;
+						img{
+							display: block;
+							width: 44px;
+							height: 44px;
+							margin: 20px 20px 0 3px;
+						}
+					}
+					.m-right{
+						width: 250px;
+						height: 150px;
+						float: left;
+						.adds-num{
+							font-size: 12px;
+							color: black;
+							span{
+								color: red;
+							}
+						}
+						.adds{
+							height: 44px;
+							line-height: 44px;
+							font-size: 18px;
+							margin-top: 20px;
+						}
+						
+						.mongo{
+							display: inline-block;
+							width: 128px;
+							height: 33px;
+							border: 1px solid #d7070c;
+							font-size: 14px;
+							color: white;
+							line-height: 33px;
+							text-align: center;
+							font-weight: 900;
+							background: #e31b35;
+							margin-right: 5px;
+							margin-top:20px;
+						}
+						.contgoods{
+							@extend .mongo;
+							cursor: pointer;
+							width: 98px;
+							height: 33px;
+							border: 1px solid #e5e5e5;
+							background: #48ac6d;
+						}
+					}
+				}
+			}
+		}
+	}
+}
