--- a/scss/description.scss
+++ b/scss/description.scss
@@ -32,3 +32,123 @@
 		color: #ed1f23;
 	}
 }
+.des-m{
+	width: 1190px;
+    margin: 0 auto;
+	overflow: hidden;
+	background: papayawhip;
+	.zhong{
+		width: 1190px;
+		height: 290px;
+		margin-top: 10px;
+		.z-layer{
+			width: 178px;
+			height: 40px;
+			border-top: #ed1f23 2px solid;
+			color: #ed1f23;
+			margin-right: -1px;
+			cursor: pointer;
+			border-left: #eee 1px solid;
+			border-right: #eee 1px solid;
+			font-size: 16px;
+			text-align: center;
+			line-height: 40px;
+		}
+		.z-spmore{
+			width: 1190px;
+			height: 242px;
+			background: palegreen;
+		}
+	}
+	.xia{
+		width: 1190px;
+		background: paleturquoise;
+		overflow: hidden;
+		font-size: 12px;
+		.xia-left{
+			width: 980px;
+			overflow: hidden;
+			float: left;
+			.xl-t{
+				border: #ddd 1px solid;
+				width: 978px;
+				height: 38px;
+				background: #fafafa;
+				font-size: 14px;
+				li{
+					width: 109px;
+					height: 38px;
+					color: #333;
+					font-size: 14px;
+					line-height: 38px;
+					text-align: center;
+					float: left;
+					border-right: #ddd 1px solid;
+				}
+			}
+			.xl-list1{
+				width: 980px;
+				overflow: hidden;
+				.xllist1-txt{
+					padding: 10px 14px;   
+					color: #333333;
+					line-height: 26px;
+					overflow: hidden;
+				}
+			}
+			.xllist2-txt{
+				padding: 10px 14px;   
+				color: #333333;
+				line-height: 26px;
+				overflow: hidden;
+			}
+			.xllist3-txt{
+				padding: 10px 14px;   
+				color: #333333;
+				line-height: 26px;
+				overflow: hidden;
+			}
+			.ckmore{
+				display: block;
+				width: 112px;
+				height: 30px;
+				line-height: 30px;
+				margin: 10px 0 50px;
+				border-radius: 2px;
+				background-color: #ed1f23;
+				color: #fff;
+				text-align: center;
+				cursor: pointer;
+			}
+			.ckmore:hover{
+				background-color: #d91216;
+			}
+			.shouqi{
+				display: none;
+				cursor: pointer;
+				width: 110px;
+				height: 28px;
+				line-height: 28px;
+				border: 1px solid #e9e9e9;
+				margin: 20px 0;
+				border-radius: 2px;
+				color: #333333;
+				text-align: center;
+			}
+			.shouqi:hover{
+				background-color: #e5e5e5;
+			}
+		}
+		
+		.xllist-n{
+			width: 936px;
+			padding-left: 8px;
+			border-left: 6px solid #ed1f23;
+			font-size: 14px;
+			background-color: #fafafa;
+			line-height: 35px;
+			height: 35px;
+			margin-left: 13px;
+		}
+	}
+}
